<resources>
    <string name="settings">Настройки</string>
    <string name="add">Добавить</string>
    <string name="pairs">Предметы</string>
    <string name="users">Пользователи</string>
    <string name="empty_list">Список пуст</string>
    <string name="list_loading">Однако, здравствуйте</string>

    <string name="title_fragment_main">Main Fragment</string>
    <string name="title_fragment_schedule">Расписание</string>
    <string name="title_fragment_debug">Отладка</string>
    <string name="title_fragment_not_presented">Стата за неделю</string>
    <string name="title_fragment_management">Управление</string>
    <string name="title_fragment_journal">Журнал</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="access_denied">Access Denied</string>
    <string name="access_denied_not_allowed">Недостаточно прав</string>
    <string name="access_denied_offline">Сейчас вы отключены от сервера</string>

    <string name="update_string">Доступно обновление</string>
    <string name="update_string_current">Текущая версия:</string>
    <string name="update_string_new">Новая версия:</string>
    <string name="update_action_update">Обновить</string>
    <string name="update_action_cancel">Отложить</string>
    <string name="about">О программе</string>
    <string name="update">Обновить</string>
    <string name="about_message">Авторы:\nЕвгений Рудзянский\nВладислав Сумин\n\nВерсия: %s</string>
    <string name="edit_template">Редактирование шаблона</string>
    <string name="choose_weeks">Выбор недель</string>
    <string name="label_id">ID</string>
    <string name="label_type">Тип</string>
    <string name="label_name">Название</string>
    <string name="label_audience">Аудитория</string>
    <string name="label_teacher">Препод</string>
    <string name="label_last_task">Задание</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_delete">Удалить</string>
    <string name="label_group">Группа</string>
    <string name="label_vk">VK</string>
    <string name="btn_vk_page">Перейти на страницу</string>
    <string name="label_username">Имя</string>
    <string name="label_week_day">День недели</string>
    <string name="label_lesson_number">Номер пары</string>
    <string name="label_lesson">Предмет</string>
    <string name="weeks">Недели</string>
    <string name="choose">Выбрать</string>

    <string-array name="evenness">
        <item>Каждую неделю</item>
        <item>По нечетным</item>
        <item>По четным</item>
        <item>Выбрать вручную</item>
    </string-array>

    <string-array name="week_days">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
</resources>
