<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--<item-->
        <!--android:id="@+id/nav_main"-->
        <!--android:title="@string/title_fragment_main" />-->
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/title_fragment_schedule" />
        <item
            android:id="@+id/nav_journal"
            android:title="@string/title_fragment_journal" />
        <item
            android:id="@+id/nav_management"
            android:title="@string/title_fragment_management" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/title_fragment_not_presented" />
        <item
            android:id="@+id/nav_debug"
            android:title="@string/title_fragment_debug" />
    </group>

</menu>
