<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_pair"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.falseteam.schedule.management.EditLessonActivity">

    <TextView
        android:id="@+id/labelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_id" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/labelID"
        android:layout_alignParentEnd="true"
        android:text="@string/label_id" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/id"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/name"
        android:layout_alignBottom="@+id/name"
        android:layout_alignParentStart="true"
        android:text="@string/label_username" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/btn_delete" />

    <Button
        android:text="@string/btn_vk_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignStart="@+id/name"
        android:id="@+id/vk"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/labelVK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_vk"
        android:layout_alignBaseline="@+id/vk"
        android:layout_alignBottom="@+id/vk"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/vkId"
        android:layout_alignBottom="@+id/vk"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group"
        android:layout_below="@+id/vk"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/vk" />

    <TextView
        android:id="@+id/labelGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_group"
        android:layout_below="@+id/vk"
        android:layout_alignParentStart="true" />

</RelativeLayout>
