<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4sp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="4sp"
        android:paddingLeft="4sp"
        android:paddingRight="4sp"
        android:text="@string/update_string"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:paddingLeft="4sp"
        android:text="@string/update_string_current" />

    <TextView
        android:id="@+id/Label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:paddingLeft="4sp"
        android:text="@string/update_string_new" />

    <Button
        android:id="@+id/actUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Label3"
        android:text="@string/update_action_update" />

    <Button
        android:id="@+id/actRemind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/actUpdate"
        android:layout_alignBottom="@+id/actUpdate"
        android:layout_toEndOf="@+id/actUpdate"
        android:text="@string/update_action_cancel" />

    <TextView
        android:id="@+id/newVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/actRemind"
        android:layout_alignEnd="@+id/actRemind"
        android:paddingRight="4sp" />

    <TextView
        android:id="@+id/currentVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newVersion"
        android:layout_alignEnd="@+id/newVersion"
        android:layout_toStartOf="@+id/newVersion"
        android:paddingRight="4sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/actRemind"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/actUpdate"
        android:layout_toStartOf="@+id/newVersion"
        android:paddingLeft="4sp"
        android:paddingRight="4sp" />

</RelativeLayout>